# pretty-node

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  package.json
src/: config.rs  explorer.rs  lib.rs  main.rs  module_info.rs  npm_client.rs  output_format.rs  tree_formatter.rs  utils.rs
src/parser/: ast_parser.rs  import_resolver.rs  mod.rs  parameter_parser.rs  semantic_analyzer.rs  signature.rs  typescript.rs
tests/: test_cli.rs  test_explorer.rs
